--- a/index.html
+++ b/index.html
@@ -430,7 +430,8 @@
 
     <section class="about">
         <div class="main">
-            <img class="abme" src="loginform.jpg" alt="loading">
+            <img class="abme" src="Untitled design (1).png
+" alt="loading">
             <div class="about-text">
                 <h2>About me</h2>
                 <h5>Developer <span>& Designer</span>
